--- a/app/assets/stylesheets/bootstrap_config.sass
+++ b/app/assets/stylesheets/bootstrap_config.sass
@@ -1,2 +1,87 @@
 @import 'bootstrap-sprockets'
 @import 'bootstrap'
+
+body
+  padding-top: 70px
+  background: #ddd url('http://tympanus.net/Tutorials/3DHoverEffects/images/bg.jpg') repeat top left
+
+  .navbar-inverse
+    .navbar-brand
+      color: white
+      font-size: 20px
+
+    p.navbar-text
+      cursor: default
+      img
+        margin-left: 15px
+        margin-right: 5px
+
+  a.glyphicon
+    &.glyphicon-log-in
+      font-size: 20px
+    &.glyphicon-wrench
+      font-size: 20px
+    &.glyphicon-log-out
+      font-size: 20px
+
+  .table-striped
+    background-color: white
+    th
+      background-color: #428bca
+      color: white
+      font-weight: normal
+      border: 1px solid transparent #357ebd
+      white-space: nowrap
+      font-size: 14px
+      line-height: 1.428571429
+      border-bottom: none
+    tbody
+      td
+        border-top: 1px solid #B8C8D9
+
+  .panel-default
+    width: 800px
+    .panel-heading
+      background-color: #428bca
+      color: white
+      font-weight: bold
+      white-space: nowrap
+      font-size: 14px
+      line-height: 1.428571429
+
+  .panel.panel-short
+    width: 400px
+    border: 1px solid #B8C8D9
+    .panel-heading
+      background-color: #428bca
+      color: white
+      font-weight: bold
+      white-space: nowrap
+      font-size: 14px
+      line-height: 1.428571429
+
+  .panel-gem
+    padding: 50px 0px 50px
+
+  a:hover
+    text-decoration: none
+
+  .col-sm-6.col-md-4
+    .panel
+      width: 350px
+    .thumbnail
+      min-height: 400px
+      .caption
+        min-height: 200px
+        div:last-child
+          position: absolute
+          bottom: 120px
+    .thumbnail-image
+      background: #dddddd url("http://tympanus.net/Tutorials/3DHoverEffects/images/bg.jpg") repeat top left
+      height: 210px
+      img
+        display: block
+        max-width: 100%
+        height: 205px
+        margin-left: auto
+        margin-right: auto
