--- a/app/views/log_files/show.html.erb
+++ b/app/views/log_files/show.html.erb
@@ -1,38 +1,186 @@
-<div class='panel panel-primary'>
-  <div class='panel-heading'>
-    <h3 class='panel-title'><%= @log_file.name %></h3>
-  </div>
+<div class='panel panel-default'>
+  <div class='panel-heading'>Log File Details</div>
   <div class='panel-body'>
-    <div class="alert alert-info" role="alert">
-      <%= @log_file.description %>
-    </div>
-    <div class='panel-gem'>
-      <p>
-        <strong>Access type:</strong>
-        <%= @log_file.get_access_type_name %>
-      </p>
 
-      <p>
-        <strong>Config file:</strong>
-        <%=  @log_file.get_config_file %>
-      </p>
+    <!-- Nav tabs -->
+    <ul class='nav nav-tabs' role='tablist'>
+      <li class='active'><a href='#info' role='tab' data-toggle='tab'><i class='icon-user-4'></i>Info</a></li>
+      <li><a href='#log' role='tab' data-toggle='tab'><i class='icon-article-alt-1'></i>Log file</a></li>
+      <li><a href='#conf' role='tab' data-toggle='tab'><i class='icon-article-alt-1'></i>Config file</a></li>
+      <li><a href='#details' role='tab' data-toggle='tab'><i class='icon-article-alt-1'></i>System details</a></li>
+      <li><a href='#statistics' role='tab' data-toggle='tab'><i class='icon-article-alt-1'></i>Statistics</a></li>
+    </ul>
+
+    <!-- Tab panes -->
+    <div class='tab-content'>
+
+      <div class='tab-pane active' id='info'>
+        <br />
+        <div class='table-responsive'>
+          <table class='table table-striped table-bordered table-condensed'>
+            <thead>
+            <tr>
+              <th colspan='2'><span style='visibility:hidden;'>Hidden Text</span></th>
+            </tr>
+            </thead>
+            <tbody>
+                <tr>
+                  <td><strong>Name</strong></td>
+                  <td><%= @log_file.name %></td>
+                </tr>
+                <tr>
+                  <td><strong>Description</strong></td>
+                  <td><%= @log_file.description %></td>
+                </tr>
+                <tr>
+                  <td><strong>Access</strong></td>
+                  <td><%= @log_file.get_access_type_name %></td>
+                </tr>
+                <tr>
+                  <td><strong>Size (MB)</strong></td>
+                  <td><%= @log_file.get_file_size %></td>
+                </tr>
+                <tr>
+                  <td><strong>Created by</strong></td>
+                  <td><%= get_user_name_by_id(@log_file.user_id) %></td>
+                </tr>
+                <tr>
+                  <td><strong>Created on</strong></td>
+                  <td><%= @log_file.created_at.to_date %></td>
+                </tr>
+                <tr>
+                  <td><strong>Last modified on</strong></td>
+                  <td><%= @log_file.updated_at.to_date %></td>
+                </tr>
+            </tbody>
+          </table>
+         </div>
+      </div>
+
+      <div class='tab-pane' id='log'>
+        <br />
+        <div class='table-responsive'>
+          <pre class="log-file" data-source="<%= (@log_file.log_file) %>"></pre>
+        </div>
+      </div>
+
+      <div class='tab-pane' id='conf'>
+        <br />
+        <div class='table-responsive'>
+            <% if valid_json?(@log_file.get_config_file) %>
+               <pre class="config-file">
+                <%= JSON.pretty_generate(JSON.parse(@log_file.get_config_file)) %>
+               </pre>
+            <% else %>
+              <div class="alert alert-info" role="alert">
+                <%= 'JSON configuration file is not uploaded.' %>
+              </div>
+            <% end %>
+        </div>
+      </div>
+
+      <%
+        platform_details = @log_file.get_platform_details
+        gpu_details = @log_file.get_gpu_details
+      %>
+      <div class='tab-pane' id='details'>
+        <br />
+        <div class='table-responsive'>
+          <table class='table table-striped table-bordered table-condensed'>
+            <thead>
+            <tr>
+              <th colspan='2'><span>Platform details</span></th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+              <td><strong>Vendor</strong></td>
+              <td><%= platform_details.vendor %></td>
+            </tr>
+            <tr>
+              <td><strong>Name</strong></td>
+              <td><%= platform_details.name %></td>
+            </tr>
+            <tr>
+              <td><strong>Version</strong></td>
+              <td><%= platform_details.version %></td>
+            </tr>
+            </tbody>
+          </table>
+          <table class='table table-striped table-bordered table-condensed'>
+            <thead>
+            <tr>
+              <th colspan='3'><span>GPUs details</span></th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr style='font-weight: bold;'>
+              <td>Vendor ID</td>
+              <td>Name</td>
+              <td>UDID</td>
+            </tr>
+            <% gpu_details.each do |gpu| %>
+            <tr>
+              <td><%= gpu.vendorID %></td>
+              <td><%= gpu.name %></td>
+              <td><%= gpu.UDID %></td>
+            </tr>
+            <% end %>
+            </tbody>
+          </table>
+        </div>
+      </div>
+
+      <%
+         runtime_statistics = @log_file.get_runtime_statistics
+         pool_statistics = @log_file.get_pool_statistics
+      %>
+      <div class='tab-pane' id='statistics'>
+        <br />
+        <div class='table-responsive'>
+          <div class="list-group">
+            <a href="javascript: void(0)" class="list-group-item active title">Runtime statistics</a>
+            <% runtime_statistics.each do |stats| %>
+            <a href="javascript: void(0)" class="list-group-item"><%= stats.stats %></a>
+            <% end %>
+          </div>
+
+          <div class='panel panel-default internal'>
+            <div class='panel-heading'>Pool statistics</div>
+            <div class='panel-body'>
+              <div class="panel-group" id="accordion">
+
+                <% pool_statistics.each_with_index do |pool, index| %>
+                <div class="panel panel-primary">
+                  <div class="panel-heading">
+                    <h4 class="panel-title">
+                      <a data-toggle="collapse" data-parent="#accordion" href="#accordion<%= index %>">
+                        <%= pool.name %>
+                      </a>
+                    </h4>
+                  </div>
+                  <div id="accordion<%= index %>" class="panel-collapse collapse">
+                    <div class="panel-body">
+                      <div class="list-group">
+                        <% pool.pool_statistics.each do |stats| %>
+                            <a href="javascript: void(0)" class="list-group-item"><%= stats.stats %></a>
+                        <% end %>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <% end %>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        </div>
+      </div>
 
 
-      <pre data-source="<%= (@log_file.log_file) %>">
-        </pre>
     </div>
-  </div>
-  <div class='panel-footer'>
-    <div style='display: inline-block'>
-      <strong>Created by:</strong>
-      <%= get_user_name_by_id(@log_file.user_id) %>
-      <br />
-      <strong>Created on:</strong>
-      <%= @log_file.created_at.to_date %>
-      <br />
-      <strong>Last modified on:</strong>
-      <%= @log_file.updated_at.to_date %>
-    </div>
+
   </div>
 </div>
 
