--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,7 +5,7 @@
     <!-- Nav tabs -->
     <ul class='nav nav-tabs' role='tablist'>
       <li class='active'><a href='#profile' role='tab' data-toggle='tab'><i class='icon-user-4'></i>Profile</a></li>
-      <li><a href='#articles' role='tab' data-toggle='tab'><i class='icon-article-alt-1'></i>Articles</a></li>
+      <li><a href='#files' role='tab' data-toggle='tab'><i class='icon-article-alt-1'></i>Log files</a></li>
       <li><a href='#logs' role='tab' data-toggle='tab'><i class='icon-calendar-7'></i>Logs</a></li>
       <li><a href='#others' role='tab' data-toggle='tab'><i class='icon-info-circled'></i>Other</a></li>
     </ul>
@@ -42,37 +42,43 @@
               </tr>
             <% if can? :manage, User %>
               <tr>
-                <td><strong>Is Admin</strong></td>
-                <td><%= @user.is_admin? ? 'Yes' : 'No' %></td>
+                <td><strong>Admin</strong></td>
+                <td><%= @user.is_admin? ? '<i class="icon-ok"></i>'.html_safe : '<i class="icon-cancel"></i>'.html_safe %></td>
               </tr>
             <% end %>
             </tbody>
           </table>
         </div>
       </div>
-      <div class='tab-pane' id='articles'>
+      <div class='tab-pane' id='files'>
         <br />
         <div class='table-responsive'>
           <table class='table table-striped table-bordered table-condensed'>
             <thead>
             <tr>
               <th><strong>Name</strong></th>
+              <th><strong>Size (MB)</strong></th>
+              <th><strong>Description</strong></th>
+              <th><strong>Access</strong></th>
               <th><strong>Created at</strong></th>
               <th><strong>Last Modified at</strong></th>
             </tr>
             </thead>
             <tbody>
-            <% articles = get_log_files_by_id(@user.id) %>
-            <% if articles.empty? %>
+            <% log_files = get_log_files_by_id(@user.id) %>
+            <% if log_files.empty? %>
                 <tr>
-                  <td colspan='3'><strong>No articles found.</strong></td>
+                  <td colspan='3'><strong>No log files found.</strong></td>
                 </tr>
             <% else %>
-                <% articles.each do |article| %>
+                <% log_files.each do |log_file| %>
                     <tr>
-                      <td><%= link_to article.name, article_path(article.id) %></td>
-                      <td><%= article.created_at %></td>
-                      <td><%= article.updated_at %></td>
+                      <td><%= link_to log_file.name, log_file_path(log_file.id) %></td>
+                      <td><%= log_file.get_file_size %></td>
+                      <td><%= log_file.description %></td>
+                      <td><%= log_file.get_access_type_name %></td>
+                      <td><%= log_file.created_at %></td>
+                      <td><%= log_file.updated_at %></td>
                     </tr>
                 <% end %>
             <% end %>
