--- a/app/views/log_files/show.html.erb
+++ b/app/views/log_files/show.html.erb
@@ -134,36 +134,52 @@
       <%
          runtime_statistics = @log_file.get_runtime_statistics
          pool_statistics = @log_file.get_pool_statistics
+         device_statistics = @log_file.get_device_statistics
       %>
       <div class='tab-pane' id='statistics'>
         <br />
         <div class='table-responsive'>
+
           <div class="list-group">
             <a href="javascript: void(0)" class="list-group-item active title">Runtime statistics</a>
-            <% runtime_statistics.each do |stats| %>
-            <a href="javascript: void(0)" class="list-group-item"><%= stats.stats %></a>
+            <% runtime_statistics.each_with_index do |stats, index| %>
+            <a href="javascript: void(0)" class="list-group-item">
+              <%= if index == 0
+                    (stats.stats.sub('[',': <span class="stats">').sub(']','</span>')).html_safe
+                  else
+                    (stats.stats.sub(':',': <span class="stats">') + '</span>').html_safe
+                  end
+              %>
+            </a>
             <% end %>
           </div>
 
           <div class='panel panel-default internal'>
             <div class='panel-heading'>Pool statistics</div>
             <div class='panel-body'>
-              <div class="panel-group" id="accordion">
+
+              <div class='panel panel-default internal'>
+                <div class='panel-body panel-chart' id="pool-chart">
+                  <%= render partial: 'log_files/charts/pool_statistics.html.erb', locals: {stats: pool_statistics} %>
+                </div>
+              </div>
+
+              <div class="panel-group accordion" id="accordion_pool">
 
                 <% pool_statistics.each_with_index do |pool, index| %>
                 <div class="panel panel-primary">
-                  <div class="panel-heading">
+                  <div class="panel-heading accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion_pool" data-target="#accordion_pool_<%= index %>">
                     <h4 class="panel-title">
-                      <a data-toggle="collapse" data-parent="#accordion" href="#accordion<%= index %>">
+                      <a>
                         <%= pool.name %>
                       </a>
                     </h4>
                   </div>
-                  <div id="accordion<%= index %>" class="panel-collapse collapse">
+                  <div id="accordion_pool_<%= index %>" class="panel-collapse collapse">
                     <div class="panel-body">
                       <div class="list-group">
                         <% pool.pool_statistics.each do |stats| %>
-                            <a href="javascript: void(0)" class="list-group-item"><%= stats.stats %></a>
+                            <a href="javascript: void(0)" class="list-group-item"><%= (stats.stats.sub(':',': <span class="stats">') + "</span>").html_safe %></a>
                         <% end %>
                       </div>
                     </div>
@@ -173,15 +189,71 @@
               </div>
             </div>
           </div>
+
+          <div class='panel panel-default internal'>
+            <div class='panel-heading'>Device statistics</div>
+            <div class='panel-body'>
+
+              <div class='panel panel-default internal'>
+                <%= render partial: 'log_files/charts/device_statistics.html.erb', locals: {stats: device_statistics} %>
+                <table class='table table-striped table-bordered table-condensed chart'>
+                  <tr>
+                    <td>
+                      <div class='panel-body panel-chart' id="gpu-chart-01"></div>
+                    </td>
+                    <td>
+                      <div class='panel-body panel-chart' id="gpu-chart-02"></div>
+                    </td>
+                  </tr>
+                </table>
+              </div>
+
+              <div class="panel-group accordion" id="accordion_gpu">
+
+                <% device_statistics.each_with_index do |device, index| %>
+                    <div class="panel panel-primary">
+                      <div class="panel-heading accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion_gpu" data-target="#accordion_gpu_<%= index %>">
+                        <h4 class="panel-title">
+                          <a >
+                            <%= device.name %>
+                          </a>
+                        </h4>
+                      </div>
+                      <div id="accordion_gpu_<%= index %>" class="panel-collapse collapse">
+                        <div class="panel-body">
+                          <div class="list-group">
+                            <a href="javascript: void(0)" class="list-group-item">
+                              Average hash rate: <span class="stats"><%= device.graphics_processing_unit_stat.average %></span>
+                            </a>
+                            <a href="javascript: void(0)" class="list-group-item">
+                              (5s) hash rate: <span class="stats"><%= device.graphics_processing_unit_stat.last_five_seconds %></span>
+                            </a>
+                            <a href="javascript: void(0)" class="list-group-item">
+                              Accepted shares: <span class="stats"><%= device.graphics_processing_unit_stat.accepted %></span>
+                            </a>
+                            <a href="javascript: void(0)" class="list-group-item">
+                              Rejected shares: <span class="stats"><%= device.graphics_processing_unit_stat.rejected %></span>
+                            </a>
+                            <a href="javascript: void(0)" class="list-group-item">
+                              Hardware errors: <span class="stats"><%= device.graphics_processing_unit_stat.hardware_errors %></span>
+                            </a>
+                            <a href="javascript: void(0)" class="list-group-item">
+                              Work utility: <span class="stats"><%= device.graphics_processing_unit_stat.work_utility %></span>
+                            </a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                <% end %>
+              </div>
+            </div>
+          </div>
+
         </div>
 
         </div>
       </div>
-
-
     </div>
-
-  </div>
 </div>
 
 <% if can? :update, LogFile %>
