--- a/app/assets/stylesheets/bootstrap_config.sass
+++ b/app/assets/stylesheets/bootstrap_config.sass
@@ -49,6 +49,9 @@ body
       white-space: nowrap
       font-size: 14px
       line-height: 1.428571429
+      .label.label-success
+        float: right
+        font-size: 100%
     .panel-body
       ul.nav.nav-tabs
         a
@@ -74,22 +77,23 @@ body
   .col-sm-6.col-md-4
     .panel
       width: 350px
+    .panel-body
+      padding: 10px
     .thumbnail
-      min-height: 400px
-      .caption
-        min-height: 200px
-        div:last-child
-          position: absolute
-          bottom: 120px
-    .thumbnail-image
-      background: #dddddd url("http://tympanus.net/Tutorials/3DHoverEffects/images/bg.jpg") repeat top left
-      height: 210px
+      margin-bottom: 10px
+    .thumbnail-chart
+      height: 180px
       img
         display: block
         max-width: 100%
         height: 205px
         margin-left: auto
         margin-right: auto
+    .list-group
+      margin: 0px
+      li
+        padding: 5px
+        font-size: 12px
 
   a.btn
     font-weight: bold
@@ -160,3 +164,7 @@ body
     table.table-striped.table-bordered.table-condensed.panel-chart
       td
         width: 50%
+
+  #pool-chart
+    width: 100%
+
