--- a/app/assets/stylesheets/bootstrap_config.sass
+++ b/app/assets/stylesheets/bootstrap_config.sass
@@ -40,6 +40,12 @@ body
         border-top: 1px solid #B8C8D9
         vertical-align: middle
 
+  .panel-success
+    .panel-heading
+      .label.label-success
+        float: right
+        font-size: 100%
+
   .panel-default
     width: 800px
     .panel-heading
@@ -109,7 +115,7 @@ body
   abbr
     display: none
 
-  .form-options
+  .form-options.a
     span
       cursor: pointer
       padding-right: 20px
@@ -168,3 +174,14 @@ body
   #pool-chart
     width: 100%
 
+  .search-form
+    span label
+      width: auto
+      input
+        width: auto
+        margin-left: 15px
+        margin-right: 5px
+    .button-holder
+      display: inline-block
+      float: right
+      padding-right: 15px
