--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -17,7 +17,7 @@
               <%= button_tag(type: 'submit', class: 'btn btn-warning') do %>
                   <i class='icon-edit-alt'></i> Update
               <% end %>
-              <%= button_tag(registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: 'btn btn-danger') do %>
+              <%= button_tag(registration_path(resource_name), data: { confirm: 'Are you sure?' }, method: :delete, class: 'btn btn-danger') do %>
                   <i class='icon-trash'></i> Cancel my account
               <% end %>
             </div>
