--- a/app/views/log_files/charts/_device_statistics.html.erb
+++ b/app/views/log_files/charts/_device_statistics.html.erb
@@ -32,6 +32,10 @@
 
     $(document).ready(function(){
 
+        Highcharts.setOptions({
+            colors: ['#50B432', '#ED561B', '#DDDF00', '#24CBE5', '#64E572', '#FF9655', '#FFF263',      '#6AF9C4']
+        });
+
         var is_gpu_statistics_chart01_rendered = false;
         var chart_container01 = $('#gpu-chart-01');
 
