--- a/app/views/log_files/charts/_index_charts_statistics.html.erb
+++ b/app/views/log_files/charts/_index_charts_statistics.html.erb
@@ -1,7 +1,7 @@
 <script type="text/javascript">
     $(document).ready(function() {
         Highcharts.setOptions({
-            colors: ["#69CD4B", "#ED561B"]
+            colors: ["#FCDE02", "#d9534f"]
         });
         $(".thumbnail-chart").each(function() {
             $(this).highcharts({
