--- a/app/views/log_files/show.html.erb
+++ b/app/views/log_files/show.html.erb
@@ -4,11 +4,11 @@
 
     <!-- Nav tabs -->
     <ul class='nav nav-tabs' role='tablist'>
-      <li class='active'><a href='#info' role='tab' data-toggle='tab'><i class='icon-user-4'></i>Info</a></li>
-      <li><a href='#log' role='tab' data-toggle='tab'><i class='icon-article-alt-1'></i>Log file</a></li>
-      <li><a href='#conf' role='tab' data-toggle='tab'><i class='icon-article-alt-1'></i>Config file</a></li>
+      <li class='active'><a href='#info' role='tab' data-toggle='tab'><i class='icon-info-1'></i>Info</a></li>
+      <li><a href='#log' role='tab' data-toggle='tab'><i class='icon-doc-text'></i>Log file</a></li>
+      <li><a href='#conf' role='tab' data-toggle='tab'><i class='icon-doc'></i>Config file</a></li>
       <li><a href='#details' role='tab' data-toggle='tab'><i class='icon-article-alt-1'></i>System details</a></li>
-      <li><a href='#statistics' role='tab' data-toggle='tab'><i class='icon-article-alt-1'></i>Statistics</a></li>
+      <li><a href='#statistics' role='tab' data-toggle='tab'><i class='icon-docs'></i>Statistics</a></li>
     </ul>
 
     <!-- Tab panes -->
@@ -61,6 +61,7 @@
         <br />
         <div class='table-responsive'>
           <pre class="log-file" data-source="<%= (@log_file.log_file) %>"></pre>
+          <%= render partial: 'log_files/charts/load_log_file.html.erb' %>
         </div>
       </div>
 
