--- a/app/views/access_types/edit.html.erb
+++ b/app/views/access_types/edit.html.erb
@@ -1,6 +1,17 @@
-<h1>Editing access_type</h1>
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h3 class="panel-title"><strong>Editing access type</strong></h3>
+  </div>
+  <div class="panel-body">
+    <%= render 'form' %>
+  </div>
+</div>
 
-<%= render 'form' %>
+<%= link_to @access_type, class: 'btn btn-success' do %>
+    <i class='icon-list-alt'></i> Show
+<% end %>
 
-<%= link_to 'Show', @access_type %> |
-<%= link_to 'Back', access_types_path %>
+<%= link_to access_types_path, class: 'btn btn-default btn-primary' do %>
+    <i class='icon-left-big'></i> Back
+<% end %>
+
