--- a/app/views/access_types/index.html.erb
+++ b/app/views/access_types/index.html.erb
@@ -1,27 +1,48 @@
-<h1>Listing access_types</h1>
-
-<table>
-  <thead>
+<div class='table-responsive'>
+  <table class='table table-striped'>
+    <thead>
     <tr>
       <th>Name</th>
       <th>Description</th>
-      <th colspan="3"></th>
+      <th></th>
     </tr>
-  </thead>
-
-  <tbody>
+    </thead>
+    <tbody>
     <% @access_types.each do |access_type| %>
-      <tr>
-        <td><%= access_type.name %></td>
-        <td><%= access_type.description %></td>
-        <td><%= link_to 'Show', access_type %></td>
-        <td><%= link_to 'Edit', edit_access_type_path(access_type) %></td>
-        <td><%= link_to 'Destroy', access_type, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+        <tr>
+          <td><%= access_type.name %></td>
+          <td><%= access_type.description %></td>
+          <td>
+            <%= link_to access_type, class: 'btn btn-success' do %>
+                <i class='icon-list-alt'></i> Show
+            <% end %>
+            <%= link_to edit_access_type_path(access_type), class: 'btn btn-warning' do %>
+                <i class='icon-pencil'></i> Edit
+            <% end %>
+            <%
+               custom_delete_html = '<div>Are you sure you want to delete the following access type:</div>'
+               custom_delete_html += '<br/>'
+               custom_delete_html += '<div>' + "#{access_type.name}" + '</div>'
+
+            %>
+            <% if  can? :manage, AccessType %>
+                <%= link_to access_type,method: :delete,data: { confirm: 'Are you sure?', message: custom_delete_html},
+                            class: 'btn btn-danger' do %>
+                    <i class='icon-trash'></i> Destroy
+                <% end %>
+            <% else %>
+                <%= link_to access_type,method: :delete,data: { confirm: 'Are you sure?' },
+                            class: 'btn btn-danger disabled' do %>
+                    <i class='icon-trash'></i> Destroy
+                <% end %>
+            <% end %>
+          </td>
+        </tr>
     <% end %>
-  </tbody>
-</table>
+    </tbody>
+  </table>
+</div>
 
-<br>
-
-<%= link_to 'New Access type', new_access_type_path %>
+<%= link_to new_access_type_path, class: 'btn btn-primary' do %>
+    <i class='icon-user-add'></i> New Access Type
+<% end %>
