--- a/app/views/access_types/new.html.erb
+++ b/app/views/access_types/new.html.erb
@@ -1,5 +1,12 @@
-<h1>New access_type</h1>
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h3 class="panel-title"><strong>New Access Type</strong></h3>
+  </div>
+  <div class="panel-body">
+    <%= render 'form' %>
+  </div>
+</div>
 
-<%= render 'form' %>
-
-<%= link_to 'Back', access_types_path %>
+<%= link_to access_types_path, class: 'btn btn-default btn-primary' do %>
+    <i class='icon-left-big'></i> Back
+<% end %>
