--- a/app/views/access_types/show.html.erb
+++ b/app/views/access_types/show.html.erb
@@ -1,14 +1,28 @@
-<p id="notice"><%= notice %></p>
+<div class='panel panel-default'>
+  <div class='panel-heading'>User Details</div>
+  <div class='panel-body'>
 
-<p>
-  <strong>Name:</strong>
-  <%= @access_type.name %>
-</p>
+    <p>
+      <strong>Name:</strong>
+      <%= @access_type.name %>
+    </p>
 
-<p>
-  <strong>Description:</strong>
-  <%= @access_type.description %>
-</p>
+    <p>
+      <strong>Description:</strong>
+      <%= @access_type.description %>
+    </p>
 
-<%= link_to 'Edit', edit_access_type_path(@access_type) %> |
-<%= link_to 'Back', access_types_path %>
+
+  </div>
+</div>
+
+<% if can? :manage, User %>
+    <%= link_to edit_access_type_path(@access_type), class: 'btn btn-warning' do %>
+        <i class='icon-pencil'></i> Edit
+    <% end %>
+
+    <%= link_to access_types_path, class: 'btn btn-default btn-primary' do %>
+        <i class='icon-left-big'></i> Back
+    <% end %>
+<% end %>
+
