--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,6 +34,9 @@
         <% if can? :manage, User %>
             <li class='<%= 'active' if current_page?(users_path) %>'><%= link_to 'Users', users_path %></li>
         <% end %>
+        <% if can? :manage, AccessType %>
+            <li class='<%= 'active' if current_page?(access_types_path) %>'><%= link_to 'Access Types', access_types_path %></li>
+        <% end %>
       </ul>
       <% if user_signed_in? %>
           <ul class='nav navbar-nav navbar-right'>
