--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
       <!-- Collection of nav links and other content for toggling -->
       <ul class='nav navbar-nav'>
         <li class='<%= 'active' if current_page?(log_files_path) or current_page?(root_path) %>'><%= link_to 'Logs', log_files_path %></li>
-        <li class='<%= 'active' if current_page?(log_files_path) %>'><%= link_to 'Articles', log_files_path %></li>
+        <li class='<%= 'active' if current_page?(reports_index_path) %>'><%= link_to 'Reports', reports_index_path %></li>
         <% if can? :manage, User %>
             <li class='<%= 'active' if current_page?(users_path) %>'><%= link_to 'Users', users_path %></li>
         <% end %>
